--- a/index.html
+++ b/index.html
@@ -8,297 +8,119 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
+    </style>
+  </head>
 <body>
-    <div class="email-message-top-bar">                  
-    </div>
     <!--create container-->
     <div class="container-fluid">
         <!--make a row w/width 100-->
-        <div id="main-row" class="row">
-            <!--first column - inbox/draft selector -->
-            <div id="email-select" class="col-md-2 text-center">
-                <div class="title-row text-start">
-                    <h1>süsmail</h1>
+        <div class="row row-col-3 w-100 main-row d-flex">
+            <!--first column-->
+            <div class="col-2" style="background-color: rgb(64, 61, 74);">
+              <h1 class="title">Süsmail</h1>
+                <nav class="nav nav-pills flex-column" style="background-color: rgba(102, 93, 126, 0.148);">
+                    <a class="nav-link active" aria-current="Inbox" href="#">Inbox</a>
+                    <a class="nav-link" href="">Sent</a>
+                    <a class="nav-link" href="">Draft</a>
+                    <a class="nav-link" href="">Trash</a>
+                </nav>
+                <div class="button-group d-flex justify-content-center">
+                  <div class="btn btn-outline-light" style="margin-top: 10px;">compose</div>
                 </div>
-                <div class ="col-3 w-100 message">
-                    Inbox
+            </div>
+            <!--second column-->
+            <div class="col-4" style="background-color: rgb(64, 61, 74);">
+                  <ul class="list-group" >
+                    <li class="list-group-item" style="background-color: rgb(64, 61, 74);">
+                      <div class="input-group mb-3">
+                        <input type="text" class="form-control" aria-label="Sizing example input" placeholder="search mail" aria-describedby="inputGroup-sizing-default" style="background-color: rgb(202, 198, 217);">
+                        <button class="btn btn-dark" type="button" id="button-addon2">Search</button>
+                      </div>              
+                    </li>
+                    <li class="list-group-item d-flex justify-content-end" style="background-color: rgb(64, 61, 74);">
+                      <div class="inbox-icon d-flex align-items-center justify-content-center">ü</div>   
+                        <div class="card" style="width: 25rem;">
+                            <div class="card-body">
+                              <h5 class="card-title">Sub: Assignment Due</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">from: bayvalleytech@susmail.com</h6>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="card-link">forward</a>
+                              <a href="#" class="card-link">reply</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-end" style="background-color: rgb(64, 61, 74);">
+                      <div class="inbox-icon d-flex align-items-center justify-content-center">ü</div>
+                        <div class="card" style="width: 25rem;">
+                            <div class="card-body">
+                              <h5 class="card-title">Sub: Assignment Due</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">from: bayvalleytech@susmail.com</h6>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="card-link">forward</a>
+                              <a href="#" class="card-link">reply</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-end" style="background-color: rgb(64, 61, 74);">
+                      <div class="inbox-icon d-flex align-items-center justify-content-center">ü</div>
+                        <div class="card" style="width: 25rem;">
+                            <div class="card-body">
+                              <h5 class="card-title">Sub: Assignment Due</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">from: bayvalleytech@susmail.com</h6>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="card-link">forward</a>
+                              <a href="#" class="card-link">reply</a>
+                            </div>
+                          </div>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-end" style="background-color: rgb(64, 61, 74);">
+                      <div class="inbox-icon d-flex align-items-center justify-content-center">ü</div>
+                        <div class="card" style="width: 25rem;">
+                            <div class="card-body">
+                              <h5 class="card-title">Sub: Assignment Due</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">from: bayvalleytech@susmail.com</h6>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="card-link">forward</a>
+                              <a href="#" class="card-link">reply</a>
+                            </div>
+                          </div>
+                    </li>
+                  </ul>
+                 
+            </div>
+            <!--third column-->
+            <div class="col-6" style="background-color: rgba(64, 61, 74, 0.557);">
+              <nav class="navbar bg-body-tertiary">
+                <div class="container-fluid">
+                  <span class="navbar-brand mb-0 h1" style="color: white;">Welcome, User</span>
                 </div>
-                <div class ="col-3 w-100 message">
-                    Sent
-                </div>
-                <div class ="col-3 w-100 message">
-                    Draft
-                </div>
-                <div class ="col-3 w-100 message">
-                    Trash
-                </div>
+              </nav>
+              <div class="current-message" style="margin-bottom: 10px;">
+                <p class="heading">Sub: Assignment Due Soon!<br>From: veryrealuser@süsmail.com
+                </p>
+                <p class="heading-text" style="margin-left: 10px;">
+                  Dear User, 
 
-                <button type="button" class="btn btn-outline-light" style="margin-top: 10px;">COMPOSE</button>
-            </div>
-            <!--2nd column-->
-            <div id="email-inbox" class="col-md-4">
-                <div class ="col-2 w-100 message">
-                    <div class="row">
-                        <div class="col-3">
-                            <div class="inbox-icon">
-                                ü
-                            </div>
-                        </div>
-                        <div class="col-3 text-start">
-                            <p>
-                                from: dnd@gmail.com
-                            </p>
-                        </div>
-                        <div class="col-6">
-                            <p>
-                                Dear Blank,
-                                I hope this message finds you well 
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class ="col-2 w-100 message">
-                    <div class="row">
-                        <div class="col-3">
-                            <div class="inbox-icon">
-                                ü
-                            </div>
-                        </div>
-                        <div class="col-3 text-start">
-                            <p>
-                                from: dnd@gmail.com
-                            </p>
-                        </div>
-                        <div class="col-6">
-                            <p>
-                                Dear Blank,
-                                I hope this message finds you well 
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class ="col-2 w-100 message">
-                    <div class="row">
-                        <div class="col-3">
-                            <div class="inbox-icon">
-                                ü
-                            </div>
-                        </div>
-                        <div class="col-3 text-start">
-                            <p>
-                                from: dnd@gmail.com
-                            </p>
-                        </div>
-                        <div class="col-6">
-                            <p>
-                                Dear Blank,
-                                I hope this message finds you well 
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class ="col-2 w-100 message">
-                    <div class="row">
-                        <div class="col-3">
-                            <div class="inbox-icon">
-                                ü
-                            </div>
-                        </div>
-                        <div class="col-3 text-start">
-                            <p>
-                                from: dnd@gmail.com
-                            </p>
-                        </div>
-                        <div class="col-6">
-                            <p>
-                                Dear Blank,
-                                I hope this message finds you well 
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class ="col-2 w-100 message">
-                    <div class="row">
-                        <div class="col-3">
-                            <div class="inbox-icon">
-                                ü
-                            </div>
-                        </div>
-                        <div class="col-3 text-start">
-                            <p>
-                                from: dnd@gmail.com
-                            </p>
-                        </div>
-                        <div class="col-6">
-                            <p>
-                                Dear Blank,
-                                I hope this message finds you well 
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class ="col-2 w-100 message">
-                    <div class="row">
-                        <div class="col-3">
-                            <div class="inbox-icon">
-                                ü
-                            </div>
-                        </div>
-                        <div class="col-3 text-start">
-                            <p>
-                                from: dnd@gmail.com
-                            </p>
-                        </div>
-                        <div class="col-6">
-                            <p>
-                                Dear Blank,
-                                I hope this message finds you well 
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class ="col-2 w-100 message">
-                    <div class="row">
-                        <div class="col-3">
-                            <div class="inbox-icon">
-                                ü
-                            </div>
-                        </div>
-                        <div class="col-3 text-start">
-                            <p>
-                                from: dnd@gmail.com
-                            </p>
-                        </div>
-                        <div class="col-6">
-                            <p>
-                                Dear Blank,
-                                I hope this message finds you well 
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class ="col-2 w-100 message">
-                    <div class="row">
-                        <div class="col-3">
-                            <div class="inbox-icon">
-                                ü
-                            </div>
-                        </div>
-                        <div class="col-3 text-start">
-                            <p>
-                                from: dnd@gmail.com
-                            </p>
-                        </div>
-                        <div class="col-6">
-                            <p>
-                                Dear Blank,
-                                I hope this message finds you well 
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class ="col-2 w-100 message">
-                    <div class="row">
-                        <div class="col-3">
-                            <div class="inbox-icon">
-                                ü
-                            </div>
-                        </div>
-                        <div class="col-3 text-start">
-                            <p>
-                                from: dnd@gmail.com
-                            </p>
-                        </div>
-                        <div class="col-6">
-                            <p>
-                                Dear Blank,
-                                I hope this message finds you well 
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class ="col-2 w-100 message">
-                    <div class="row">
-                        <div class="col-3">
-                            <div class="inbox-icon">
-                                ü
-                            </div>
-                        </div>
-                        <div class="col-3 text-start">
-                            <p>
-                                from: dnd@gmail.com
-                            </p>
-                        </div>
-                        <div class="col-6">
-                            <p>
-                                Dear Blank,
-                                I hope this message finds you well 
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class ="col-2 w-100 message">
-                    <div class="row">
-                        <div class="col-3">
-                            <div class="inbox-icon">
-                                ü
-                            </div>
-                        </div>
-                        <div class="col-3 text-start">
-                            <p>
-                                from: dnd@gmail.com
-                            </p>
-                        </div>
-                        <div class="col-6">
-                            <p>
-                                Dear Blank,
-                                I hope this message finds you well 
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class ="col-2 w-100 message">
-                    <div class="row">
-                        <div class="col-3">
-                            <div class="inbox-icon">
-                                <p>ü</p>
-                            </div>
-                        </div>
-                        <div class="col-3 text-start">
-                            <p>
-                                from: dnd@gmail.com
-                            </p>
-                        </div>
-                        <div class="col-6">
-                            <p>
-                                Dear Blank,
-                                I hope this message finds you well 
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--3rd column-->
-            <div id="email-message" class="col-md-6 align-self-end">
-                <div class="row">
-                    <div class="col-md-3">
-                    </div>
-                    <div class="col-md-3">
-                    </div>
-                    <div class="col-md-6 w-100 align-self-end">
-                        <div id="new-message-tab" class="input-group-text">
-                            New Message
-                        </div>
-                        <textarea id="new-message" class="form-control" aria-label="With textarea"></textarea>
-                    </div>
-                </div>           
+                  I am emailing you to let you know that your email ui assingment is due soon! Please begin making your final adustments and proceed to
+                  designing your user interface. If you have any questions, please feel free to reach out through a direct message on your süsmail account.
+                  To do this hit compose, write in the text field, and then hit submit.<br><br>
+                  Best of Luck,<br>
+                  Admin
+                </p>
+              </div>
+              <span class="input-group-text" style="background-color: rgb(78, 74, 93); color: white; border-style: groove;">New Message</span>
+              <textarea class="form-control" placeholder="start new message..." aria-label="new message text area" style="height: 300px;"></textarea>
+              <button class="btn btn-outline-light" style="margin-top: 10px;">send</button>
             </div>
         </div>
     </div>
-
-
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
+
