email-ui first-draft

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <!--create container-->
     <div class="container-fluid">
         <!--make a row w/width 100-->
-        <div class="row row-col-3 w-100 main-row d-flex">
+        <div class="row row-cols-md-3 row-cols-sm-2  w-100 main-row d-flex wrap">
             <!--first column-->
-            <div class="col-2" style="background-color: rgb(64, 61, 74);">
+            <div class="col-lg-2 col-md-2 col-sm-2 col-4" style="background-color: rgb(64, 61, 74);">
               <h1 class="title">Süsmail</h1>
                 <nav class="nav nav-pills flex-column" style="background-color: rgba(102, 93, 126, 0.148);">
                     <a class="nav-link active" aria-current="Inbox" href="#">Inbox</a>
@@ -34,70 +34,70 @@
                 </div>
             </div>
             <!--second column-->
-            <div class="col-4" style="background-color: rgb(64, 61, 74);">
+            <div class="col-lg-4 col-md-5 col-sm-10 col-8" style="background-color: rgb(64, 61, 74);">
                   <ul class="list-group" >
-                    <li class="list-group-item" style="background-color: rgb(64, 61, 74);">
+                    <li class="list-group-item search" style="background-color: rgb(64, 61, 74);">
                       <div class="input-group mb-3">
                         <input type="text" class="form-control" aria-label="Sizing example input" placeholder="search mail" aria-describedby="inputGroup-sizing-default" style="background-color: rgb(202, 198, 217);">
                         <button class="btn btn-dark" type="button" id="button-addon2">Search</button>
                       </div>              
                     </li>
-                    <li class="list-group-item d-flex justify-content-end" style="background-color: rgb(64, 61, 74);">
+                    <li class="list-group-item d-flex justify-content-end align-items-center justify-content-around" style="background-color: rgb(64, 61, 74);">
                       <div class="inbox-icon d-flex align-items-center justify-content-center">ü</div>   
-                        <div class="card" style="width: 25rem;">
+                        <div class="card">
                             <div class="card-body">
                               <h5 class="card-title">Sub: Assignment Due</h5>
                               <h6 class="card-subtitle mb-2 text-muted">from: bayvalleytech@susmail.com</h6>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <p class="card-text">Jesus, please respond as quickly as possible. There is a shortage of web developers and we need your help.</p>
                               <a href="#" class="card-link">forward</a>
                               <a href="#" class="card-link">reply</a>
                             </div>
                         </div>
                     </li>
-                    <li class="list-group-item d-flex justify-content-end" style="background-color: rgb(64, 61, 74);">
-                      <div class="inbox-icon d-flex align-items-center justify-content-center">ü</div>
-                        <div class="card" style="width: 25rem;">
+                    <li class="list-group-item d-flex justify-content-end align-items-center justify-content-around" style="background-color: rgb(64, 61, 74);">
+                      <div class="inbox-icon d-flex align-items-center justify-content-center">ü</div>   
+                        <div class="card">
                             <div class="card-body">
                               <h5 class="card-title">Sub: Assignment Due</h5>
                               <h6 class="card-subtitle mb-2 text-muted">from: bayvalleytech@susmail.com</h6>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <p class="card-text">Jesus, please respond as quickly as possible. There is a shortage of web developers and we need your help.</p>
                               <a href="#" class="card-link">forward</a>
                               <a href="#" class="card-link">reply</a>
                             </div>
                         </div>
                     </li>
-                    <li class="list-group-item d-flex justify-content-end" style="background-color: rgb(64, 61, 74);">
-                      <div class="inbox-icon d-flex align-items-center justify-content-center">ü</div>
-                        <div class="card" style="width: 25rem;">
+                    <li class="list-group-item d-flex justify-content-end align-items-center justify-content-around" style="background-color: rgb(64, 61, 74);">
+                      <div class="inbox-icon d-flex align-items-center justify-content-center">ü</div>   
+                        <div class="card">
                             <div class="card-body">
                               <h5 class="card-title">Sub: Assignment Due</h5>
                               <h6 class="card-subtitle mb-2 text-muted">from: bayvalleytech@susmail.com</h6>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <p class="card-text">Jesus, please respond as quickly as possible. There is a shortage of web developers and we need your help.</p>
                               <a href="#" class="card-link">forward</a>
                               <a href="#" class="card-link">reply</a>
                             </div>
-                          </div>
+                        </div>
                     </li>
-                    <li class="list-group-item d-flex justify-content-end" style="background-color: rgb(64, 61, 74);">
-                      <div class="inbox-icon d-flex align-items-center justify-content-center">ü</div>
-                        <div class="card" style="width: 25rem;">
+                    <li class="list-group-item d-flex justify-content-end align-items-center justify-content-around" style="background-color: rgb(64, 61, 74);">
+                      <div class="inbox-icon d-flex align-items-center justify-content-center">ü</div>   
+                        <div class="card">
                             <div class="card-body">
                               <h5 class="card-title">Sub: Assignment Due</h5>
                               <h6 class="card-subtitle mb-2 text-muted">from: bayvalleytech@susmail.com</h6>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <p class="card-text">Jesus, please respond as quickly as possible. There is a shortage of web developers and we need your help.</p>
                               <a href="#" class="card-link">forward</a>
                               <a href="#" class="card-link">reply</a>
                             </div>
-                          </div>
+                        </div>
                     </li>
                   </ul>
                  
             </div>
             <!--third column-->
-            <div class="col-6" style="background-color: rgba(64, 61, 74, 0.557);">
+            <div class="col-lg-6 col-md-5 col-sm col" style="background-color: rgba(64, 61, 74, 0.557);">
               <nav class="navbar bg-body-tertiary">
                 <div class="container-fluid">
-                  <span class="navbar-brand mb-0 h1" style="color: white;">Welcome, User</span>
+                  <span class="navbar-brand mb-0 h1" style="color: white;">Welcome Back, Jesus</span>
                 </div>
               </nav>
               <div class="current-message" style="margin-bottom: 10px;">
@@ -113,9 +113,12 @@
                   Admin
                 </p>
               </div>
-              <span class="input-group-text" style="background-color: rgb(78, 74, 93); color: white; border-style: groove;">New Message</span>
-              <textarea class="form-control" placeholder="start new message..." aria-label="new message text area" style="height: 300px;"></textarea>
+              <div class="msg-input-field">
+                <span class="input-group-text" style="background-color: rgb(78, 74, 93); color: white; border-style: groove;">New Message</span>
+              <textarea class="form-control text-field" placeholder="start new message..." aria-label="new message text area" style="height: 300px;"></textarea>
               <button class="btn btn-outline-light" style="margin-top: 10px;">send</button>
+              </div>
+              
             </div>
         </div>
     </div>
